<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/countTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginTop="40dp"
        android:text="@string/section_count"/>

    <TextView
        android:id="@+id/countDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/countPauseButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:textSize="40sp"
        android:text="@string/displayDefault" />

    <Button
        android:id="@+id/countStartButton"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="38dp"
        android:text="@string/StartLabel" />

    <Button
        android:id="@+id/countPauseButton"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_alignBaseline="@+id/countStartButton"
        android:layout_alignBottom="@+id/countStartButton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="38dp"
        android:text="@string/PauseLabel" />

    <Button
        android:id="@+id/countLapButton"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/LapLabel" />

    <FrameLayout
        android:id="@+id/countLapContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignEnd="@+id/countPauseButton"
        android:layout_alignStart="@+id/countStartButton"
        android:layout_below="@+id/countStartButton"
        android:layout_alignParentBottom="true">
        <ListView
            android:id="@+id/countLapList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>



    <LinearLayout
        android:id="@+id/countPickerContainer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignEnd="@+id/countDisplay"
        android:layout_alignStart="@+id/countDisplay"
        android:layout_below="@+id/countTitle"
        android:layout_above="@+id/countDisplay">
        <NumberPicker
            android:id="@+id/countMinutePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <NumberPicker
            android:id="@+id/countSecondPicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</RelativeLayout>